<resources>
    <string name="action_settings">"Settings"</string>
    <string name="oauth_communication_error">"Unable to reach the authorization server"</string>
    <string name="user_profile">My Profile</string>
    <string name="user_login">Login</string>
    <string name="user_logout">Logout</string>
    <string name="osm_profile">OSM Profile</string>
    <string name="next">Next</string>
    <string name="letsgo">Let\'s go!</string>
    <string name="tutorial_welcome_to_osm">Welcome to OpenStreetMap</string>
    <string name="tutorial_welcome_to_osm_subtitle">the free wiki world map</string>
    <string name="tutorial_intro">StreetComplete makes it easy to contribute to OpenStreetMap.\nIt automatically looks for missing details in your vicinity: bicycle lanes, house numbers, opening hours and much more…</string>
    <string name="tutorial_solving_quests">Once found, the missing details will appear on your map as quests.\n\nYou can start solving them right away and later login to publish your answers.</string>
    <string name="tutorial_stay_safe">Whenever you are uncertain, you can always reply \"Can\'t Say\" and leave a note.\n\nFinally, remember to stay safe: Be aware of your surroundings and don\'t enter private property.</string>
    <string name="tutorial_happy_mapping">Happy Mapping!</string>
    <string name="retry">"Retry"</string>
    <string name="oauth_failed_permissions">"Authorization failed: All listed permissions need to be granted"</string>
    <string name="achievements_empty">You have no achievements yet</string>
    <string name="links_empty">You have no links yet</string>
    <string name="quests_empty">You published no quest answers yet</string>
    <string name="stats_are_syncing">Your statistics are still syncing. Check this screen later.</string>
    <string name="unsynced_quests_description">plus %d not yet published changes.</string>
    <string name="unsynced_quests_not_logged_in_description">You have %d not yet published changes. You need to login to have them uploaded.</string>
    <string name="title_activity_settings">"Settings"</string>
    <string name="pref_category_communication">"Communication"</string>
    <string name="pref_category_display">"Display"</string>
    <string name="pref_tilecache_size_summary">"%d MB"</string>
    <string name="pref_tilecache_size_message">"Space in megabytes reserved on external storage to cache map tiles"</string>
    <string name="pref_title_show_notes_not_phrased_as_questions">"Show all notes"</string>
    <string name="pref_summaryOn_show_notes_not_phrased_as_questions">"Also showing notes not phrased as questions"</string>
    <string name="pref_summaryOff_show_notes_not_phrased_as_questions">"Ignoring notes not phrased as questions"</string>
    <string name="pref_title_map_cache">"Map cache size"</string>
    <string name="map_btn_gps_tracking">"Follow me"</string>
    <string name="map_attribution_osm">"© OpenStreetMap contributors"</string>
    <string name="quest_generic_otherAnswers">"Other answers…"</string>
    <string name="quest_generic_answer_notApplicable">"Can’t say…"</string>
    <string name="quest_generic_confirmation_title">"Are you sure?"</string>
    <string name="quest_generic_confirmation_yes">"Yes, I am sure"</string>
    <string name="quest_generic_confirmation_no">"I will check"</string>
    <string name="quest_generic_error_field_empty">"You left this field empty"</string>
    <string name="quest_leave_new_note_title">"Leave a note instead?"</string>
    <string name="quest_leave_new_note_description">"You can leave a public note at this location which other mappers can comment on and hopefully resolve or alternatively just hide the quest for yourself only"</string>
    <string name="quest_leave_new_note_yes">"OK"</string>
    <string name="quest_leave_new_note_no">"No, just hide"</string>
    <string name="quest_leave_new_note_photo">Attach photo</string>
    <string name="quest_leave_new_note_photo_delete_title">Do you want to delete this picture?</string>
    <string name="quest_leave_new_note_photos_are_useful">Adding a photo will make the note much more useful.</string>
    <string name="quest_streetName_title">"What is the name of this road?"</string>
    <string name="quest_streetName_description">"as written on the street sign, abbreviations are expanded:"</string>
    <string name="quest_streetName_answer_noName_confirmation_description">"Sometimes the street sign is only at one end of the street. Also, note that there may not be extra street signs for side streets that belong to a bigger street. Usually, any street with houses has a name."</string>
    <string name="quest_streetName_nameWithAbbreviations_confirmation_title_name">"Abbreviation in the name %s?"</string>
    <string name="quest_streetName_nameWithAbbreviations_confirmation_description">"If the name can be spelled without an abbreviation, then it should be expanded. Many common abbreviations are expanded automatically while you type, but probably not all."</string>
    <string name="quest_streetName_nameWithAbbreviations_confirmation_positive">"No abbreviation"</string>
    <string name="quest_openingHours_name_title">"What are the opening hours of %s?"</string>
    <string name="quest_openingHours_name_type_title">"What are the opening hours of %1$s (%2$s)?"</string>
    <string name="quest_openingHours_no_name_title">"What are the opening hours of this place? (%s)"</string>
    <string name="quest_openingHours_resurvey_name_title">"Are these opening hours for %s still correct?"</string>
    <string name="quest_openingHours_resurvey_name_type_title">"Are these opening hours for %1$s (%2$s) still correct?"</string>
    <string name="quest_openingHours_resurvey_no_name_title">"Are these opening hours still correct (%s)?"</string>
    <string name="quest_openingHours_start_time">"opening time"</string>
    <string name="quest_openingHours_end_time">"closing time"</string>
    <string name="quest_openingHours_timeSelect_next">Next</string>
    <string name="quest_openingHours_add_months">"Add months"</string>
    <string name="quest_openingHours_add_hours">"Add hours"</string>
    <string name="quest_openingHours_add_weekdays">"Add weekdays"</string>
    <string name="quest_openingHours_add_off_days">"Add off days"</string>
    <string name="quest_openingHours_off_day">"Off day"</string>
    <string name="quest_openingHours_unspecified_range">Not specified"</string>
    <string name="quest_openingHours_chooseMonthsTitle">"Select months"</string>
    <string name="quest_openingHours_chooseWeekdaysTitle">"Select weekdays"</string>
    <string name="quest_openingHours_24_7_confirmation">"In other words, is it open any time, every day?"</string>
    <string name="quest_noteDiscussion_title">"Can you contribute anything to this note?"</string>
    <string name="quest_noteDiscussion_no">"No, hide"</string>
    <string name="quest_noteDiscussion_comment2">"— %1$s, %2$s"</string>
    <string name="quest_noteDiscussion_closed2">"Closed by %1$s, %2$s"</string>
    <string name="quest_noteDiscussion_reopen2">"Reopened by %1$s, %2$s"</string>
    <string name="quest_noteDiscussion_hide2">"Hidden by %1$s, %2$s"</string>
    <string name="quest_noteDiscussion_anonymous">"Anonymous"</string>
    <string name="confirmation_discard_title">"Discard input?"</string>
    <string name="confirmation_discard_positive">"Discard"</string>
    <string name="confirmation_discard_negative">"Cancel"</string>
    <string name="action_download">"Scan for quests here"</string>
    <string name="action_upload">"Upload answers"</string>
    <string name="no_changes">"You did not give any answer"</string>
    <string name="close">"close"</string>
    <string name="download_error">"Error while scanning for quests"</string>
    <string name="upload_error">"Error while uploading answers"</string>
    <string name="cannot_find_bbox_or_reduce_tilt">"Can’t scan here. Try to zoom in further or tilt the map less."</string>
    <string name="download_area_too_big">"Please zoom in further"</string>
    <string name="confirmation_cancel_prev_download_title">"Stop the current search and scan here instead?"</string>
    <string name="confirmation_cancel_prev_download_confirmed">"Scan here instead"</string>
    <string name="confirmation_cancel_prev_download_cancel">"Continue current scan"</string>
    <string name="notification_downloading">"Scanning for quests…"</string>
    <string name="turn_on_location_request">"Location is off. Open Settings to turn it on now?"</string>
    <string name="no_location_permission_warning">"Your location is needed to scan for quests in your vicinity."</string>
    <string name="action_about2">"About"</string>
    <string name="about_summary_current_version">"Current version: %s"</string>
    <string name="about_title_authors">"Credits"</string>
    <string name="about_summary_authors">"© 2016–2020 Tobias Zwick and contributors"</string>
    <string name="about_title_repository">"Source Repository"</string>
    <string name="about_summary_repository">"on GitHub"</string>
    <string name="about_title_report_error">"Report error"</string>
    <string name="about_title_feedback">"Give Feedback"</string>
    <string name="about_title_license">"License"</string>
    <string name="about_summary_license">"GNU General Public License"</string>
    <string name="offline">"You are offline"</string>
    <string name="confirmation_authorize_now">"You need to authorize with your OSM user account to publish your answers. Authorize now?"</string>
    <string name="not_authorized">"Not authorized"</string>
    <string name="version_banned_message">"This version of StreetComplete is too old. Please update!"</string>
    <string name="no_gps_no_quests">"To scan for quests around you automatically, turn on location"</string>
    <string name="about_title_privacy_statement">"Privacy statement"</string>
    <string name="about_summary_privacy_statement">"and data usage"</string>
    <string name="pref_title_sync2">"Upload answers automatically"</string>
    <string name="pref_title_keep_screen_on">"Keep screen on"</string>
    <string name="quest_generic_hasFeature_yes">"Yes"</string>
    <string name="quest_generic_hasFeature_no">"No"</string>
    <string name="about_category_feedback">Feedback</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_title_resurvey_intervals">Resurvey intervals</string>
    <string name="pref_title_quests">Quest selection</string>
    <string name="quest_enabled">Enabled</string>
    <string name="quest_type">Quest type</string>
    <string name="reorder_quest_priority_hint">Long-press and move a quest to reorder its priority for display on the map.</string>
    <string name="pref_title_quests_invalidation">Invalidate quest cache</string>
    <string name="pref_title_quests_invalidation_summary">Useful if you think that some quests are outdated</string>
    <string name="pref_title_quests_restore_hidden">Restore hidden quests</string>
    <string name="quest_sidewalk_value_yes">sidewalk</string>
    <string name="pref_title_theme_select">Select theme</string>
    <string name="about_title_changelog">Version history</string>
    <string name="user_statistics_filter_by_country">by country</string>
    <string name="user_statistics_filter_by_quest_type">by quest type</string>
    <string name="use_device_to_measure">Use device to measure</string>
    <string name="unit_cm">cm</string>
    <string name="value">Value</string>
    <string name="instructions_image_content_description">"An image that illustrates the measurement process visually."</string>
    <string name="quest_width_measurement_instructions">Please measure the width of the sidewalk at its narrowest section. Please also consider permanent objects such as trash cans or street lights when you determine the narrowest point.</string>
</resources>