<?xml version="1.0" encoding="utf-8"?><!--
  ~ AccessComplete, an easy to use editor of accessibility related
  ~ OpenStreetMap data for Android.  This program is a fork of
  ~ StreetComplete (https://github.com/westnordost/StreetComplete).
  ~
  ~ Copyright (C) 2016-2020 Tobias Zwick and contributors (StreetComplete authors)
  ~ Copyright (C) 2020 Sven Stoll (AccessComplete author)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="version"
        android:title="@string/about_title_changelog"
        android:widgetLayout="@layout/widget_image_next"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="authors"
        android:summary="@string/about_summary_authors"
        android:title="@string/about_title_authors"
        android:widgetLayout="@layout/widget_image_next"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="license"
        android:summary="@string/about_summary_license"
        android:title="@string/about_title_license"
        android:widgetLayout="@layout/widget_image_open_in_browser"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="repository"
        android:summary="@string/about_summary_repository"
        android:title="@string/about_title_repository"
        android:widgetLayout="@layout/widget_image_open_in_browser"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="privacy"
        android:summary="@string/about_summary_privacy_statement"
        android:title="@string/about_title_privacy_statement"
        android:widgetLayout="@layout/widget_image_next"
        app:iconSpaceReserved="false" />

    <PreferenceCategory
        android:key="feedback"
        android:title="@string/about_category_feedback"
        app:iconSpaceReserved="false">

        <Preference
            android:key="report_error"
            android:summary="@string/about_summary_repository"
            android:title="@string/about_title_report_error"
            android:widgetLayout="@layout/widget_image_open_in_browser"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="email_feedback"
            android:summary="Email sven.stoll@uzh.ch"
            android:title="@string/about_title_feedback"
            android:widgetLayout="@layout/widget_image_email"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
