<?xml version="1.0" encoding="utf-8"?><!--
  ~ AccessComplete, an easy to use editor of accessibility related
  ~ OpenStreetMap data for Android.  This program is a fork of
  ~ StreetComplete (https://github.com/westnordost/StreetComplete).
  ~
  ~ Copyright (C) 2016-2020 Tobias Zwick and contributors (StreetComplete authors)
  ~ Copyright (C) 2020 Sven Stoll (AccessComplete author)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="communication"
        android:title="@string/pref_category_communication"
        app:iconSpaceReserved="false">

        <ListPreference
            android:defaultValue="ON"
            android:entries="@array/pref_entries_autosync"
            android:entryValues="@array/pref_entryvalues_autosync"
            android:key="autosync"
            android:persistent="true"
            android:summary="%s"
            android:title="@string/pref_title_sync2"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="display"
        android:title="@string/pref_category_display"
        app:iconSpaceReserved="false">

        <Preference
            android:key="quests"
            android:title="@string/pref_title_quests"
            android:widgetLayout="@layout/widget_image_next"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="DEFAULT"
            android:entries="@array/pref_entries_resurvey_intervals"
            android:entryValues="@array/pref_entryvalues_resurvey_intervals"
            android:key="quests.resurveyIntervals"
            android:persistent="true"
            android:summary="%s"
            android:title="@string/pref_title_resurvey_intervals"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:key="display.nonQuestionNotes"
            android:persistent="true"
            android:summaryOff="@string/pref_summaryOff_show_notes_not_phrased_as_questions"
            android:summaryOn="@string/pref_summaryOn_show_notes_not_phrased_as_questions"
            android:title="@string/pref_title_show_notes_not_phrased_as_questions"
            app:iconSpaceReserved="false" />

        <SwitchPreference
            android:key="display.keepScreenOn"
            android:persistent="true"
            android:title="@string/pref_title_keep_screen_on"
            app:iconSpaceReserved="false" />

        <ListPreference
            android:defaultValue="AUTO"
            android:entries="@array/pref_entries_theme_select"
            android:entryValues="@array/pref_entryvalues_theme_select"
            android:key="theme.select"
            android:persistent="true"
            android:summary="%s"
            android:title="@string/pref_title_theme_select"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="advanced"
        android:title="@string/pref_category_advanced"
        app:iconSpaceReserved="false">

        <Preference
            android:key="quests.invalidation"
            android:summary="@string/pref_title_quests_invalidation_summary"
            android:title="@string/pref_title_quests_invalidation"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="quests.restore.hidden"
            android:title="@string/pref_title_quests_restore_hidden"
            app:iconSpaceReserved="false" />

        <ch.uzh.ifi.accesscomplete.settings.NumberPickerPreference
            android:defaultValue="50"
            android:dialogLayout="@layout/dialog_number_picker_preference"
            android:dialogMessage="@string/pref_tilecache_size_message"
            android:key="map.tilecache"
            android:negativeButtonText="@android:string/cancel"
            android:persistent="true"
            android:positiveButtonText="@android:string/ok"
            android:summary="@string/pref_tilecache_size_summary"
            android:title="@string/pref_title_map_cache"
            app:iconSpaceReserved="false"
            custom:maxValue="250"
            custom:minValue="10"
            custom:step="10" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="debug"
        android:title="Debug"
        app:iconSpaceReserved="false">

        <Preference
            android:key="debug.quests"
            android:title="Show Quest Forms"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
