<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quest_width_measurement_instructions" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/instructions_image_content_description"
        android:scaleType="centerCrop"
        android:src="@drawable/example_width" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/manualInputField"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:hint="@string/value"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/unit_cm"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/measureButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_device_to_measure" />

</LinearLayout>
