<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ AccessComplete, an easy to use editor of accessibility related
  ~ OpenStreetMap data for Android.  This program is a fork of
  ~ StreetComplete (https://github.com/westnordost/StreetComplete).
  ~
  ~ Copyright (C) 2016-2020 Tobias Zwick and contributors (StreetComplete authors)
  ~ Copyright (C) 2020 Sven Stoll (AccessComplete author)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="com.google.android.flexbox.FlexboxLayout"
    tools:flexWrap="wrap">

    <Button
        android:id="@+id/noButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BottomSheetButtonBarItem"
        android:text="@string/quest_generic_hasFeature_no" />

    <Button
        android:id="@+id/yesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BottomSheetButtonBarItem"
        android:text="@string/quest_generic_hasFeature_yes"
        />

    <Button
        android:id="@+id/sidewalkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BottomSheetButtonBarItem"
        android:text="@string/quest_sidewalk_value_yes" />
</merge>
