<?xml version="1.0" encoding="utf-8"?><!--
  ~ AccessComplete, an easy to use editor of accessibility related
  ~ OpenStreetMap data for Android.  This program is a fork of
  ~ StreetComplete (https://github.com/westnordost/StreetComplete).
  ~
  ~ Copyright (C) 2016-2020 Tobias Zwick and contributors (StreetComplete authors)
  ~ Copyright (C) 2020 Sven Stoll (AccessComplete author)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reorder_quest_priority_hint"
        android:layout_alignParentTop="true"
        android:padding="8dp" />

    <RelativeLayout
        android:id="@+id/table_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        style="@style/TableHeader">

        <TextView
            android:id="@+id/column_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/column_enabled"
            android:text="@string/quest_type"
            style="@style/TableHeaderCell" />

        <TextView
            android:id="@+id/column_enabled"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/quest_enabled"
            style="@style/TableHeaderCell" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/questSelectionList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/table_header"
        android:layout_alignParentBottom="true"
        tools:listitem="@layout/row_quest_selection" />

</RelativeLayout>
