<?xml version="1.0" encoding="utf-8"?><!--
  ~ AccessComplete, an easy to use editor of accessibility related
  ~ OpenStreetMap data for Android.  This program is a fork of
  ~ StreetComplete (https://github.com/westnordost/StreetComplete).
  ~
  ~ Copyright (C) 2016-2020 Tobias Zwick and contributors (StreetComplete authors)
  ~ Copyright (C) 2020 Sven Stoll (AccessComplete author)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/questStatisticsFragmentContainer"
        android:name="de.westnordost.accesscomplete.user.QuestStatisticsByQuestTypeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/emptyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:textAppearance="@style/TextAppearance.Title"
        android:textColor="@color/hint_text"
        android:gravity="center"
        android:text="@string/quests_empty" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/selectorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        app:elevation="4dp"
        app:checkedButton="@id/byQuestTypeButton"
        android:background="@drawable/background_button_toggle_group"
        app:singleSelection="true">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/byQuestTypeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_statistics_filter_by_quest_type"
            style="?attr/materialButtonOutlinedStyle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/byCountryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_statistics_filter_by_country"
            style="?attr/materialButtonOutlinedStyle" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
